; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/extr_opl3sa2.c_snd_opl3sa2_free.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/extr_opl3sa2.c_snd_opl3sa2_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_card = type { %struct.snd_opl3sa2* }
%struct.snd_opl3sa2 = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_card*)* @snd_opl3sa2_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_opl3sa2_free(%struct.snd_card* %0) #0 {
  %2 = alloca %struct.snd_card*, align 8
  %3 = alloca %struct.snd_opl3sa2*, align 8
  store %struct.snd_card* %0, %struct.snd_card** %2, align 8
  %4 = load %struct.snd_card*, %struct.snd_card** %2, align 8
  %5 = getelementptr inbounds %struct.snd_card, %struct.snd_card* %4, i32 0, i32 0
  %6 = load %struct.snd_opl3sa2*, %struct.snd_opl3sa2** %5, align 8
  store %struct.snd_opl3sa2* %6, %struct.snd_opl3sa2** %3, align 8
  %7 = load %struct.snd_opl3sa2*, %struct.snd_opl3sa2** %3, align 8
  %8 = getelementptr inbounds %struct.snd_opl3sa2, %struct.snd_opl3sa2* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sge i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.snd_opl3sa2*, %struct.snd_opl3sa2** %3, align 8
  %13 = getelementptr inbounds %struct.snd_opl3sa2, %struct.snd_opl3sa2* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.snd_card*, %struct.snd_card** %2, align 8
  %16 = call i32 @free_irq(i64 %14, %struct.snd_card* %15)
  br label %17

17:                                               ; preds = %11, %1
  %18 = load %struct.snd_opl3sa2*, %struct.snd_opl3sa2** %3, align 8
  %19 = getelementptr inbounds %struct.snd_opl3sa2, %struct.snd_opl3sa2* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @release_and_free_resource(i32 %20)
  ret void
}

declare dso_local i32 @free_irq(i64, %struct.snd_card*) #1

declare dso_local i32 @release_and_free_resource(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
